--- a/templates/boltcards/_api_docs.html
+++ b/templates/boltcards/_api_docs.html
@@ -12,7 +12,7 @@
 
         <a
           class="text-secondary"
-          href="https://github.com/lnbits/boltcards/tree/main"
+          href="https://github.com/lnbits/boltcards"
           >More details</a
         >
         <br />
