Update repo url (#1)

--- a/templates/boltcards/_api_docs.html
+++ b/templates/boltcards/_api_docs.html
@@ -12,7 +12,7 @@
 
         <a
           class="text-secondary"
-          href="https://github.com/lnbits/lnbits/tree/main/lnbits/extensions/boltcards"
+          href="https://github.com/lnbits/boltcards"
           >More details</a
         >
         <br />
