--- a/templates/boltcards/index.html
+++ b/templates/boltcards/index.html
@@ -445,7 +445,7 @@
         outline
         color="grey"
         @click="copyText(qrCodeDialog.data_wipe)"
-        label="Copy Wipe JSON"
+        label="Copy Key JSON"
         v-show="qrCodeDialog.wipe"
       >
         <q-tooltip>Click to copy, then paste to NFC Card Creator</q-tooltip>
