--- a/templates/dfxboltcards/_api_docs.html
+++ b/templates/dfxboltcards/_api_docs.html
@@ -1,18 +1,18 @@
 <q-expansion-item
   group="extras"
   icon="swap_vertical_circle"
-  label="About Bolt Cards"
+  label="About DFX Bolt Cards"
   :content-inset-level="0.5"
 >
   <q-card>
     <q-card-section>
       <h5 class="text-subtitle1 q-my-none">Be your own card association</h5>
       <p>
-        Manage your Bolt Cards self custodian way<br />
+        Manage your DFX Bolt Cards self custodian way<br />
 
         <a
           class="text-secondary"
-          href="https://github.com/lnbits/boltcards"
+          href="https://github.com/DFXswiss/boltcards"
           >More details</a
         >
         <br />
