feat: code quality

--- a/templates/boltcards/_api_docs.html
+++ b/templates/boltcards/_api_docs.html
@@ -10,9 +10,7 @@
       <p>
         Manage your Bolt Cards self custodian way<br />
 
-        <a
-          class="text-secondary"
-          href="https://github.com/lnbits/boltcards"
+        <a class="text-secondary" href="https://github.com/lnbits/boltcards"
           >More details</a
         >
         <br />
