--- a/templates/boltcards/index.html
+++ b/templates/boltcards/index.html
@@ -34,10 +34,10 @@
         <q-table
           dense
           flat
-          :data="cards"
+          :rows="cards"
           row-key="id"
           :columns="cardsTable.columns"
-          :pagination.sync="cardsTable.pagination"
+          v-model:pagination="cardsTable.pagination"
         >
           {% raw %}
           <template v-slot:header="props">
@@ -144,10 +144,10 @@
         <q-table
           dense
           flat
-          :data="hits"
+          :rows="hits"
           row-key="id"
           :columns="hitsTable.columns"
-          :pagination.sync="hitsTable.pagination"
+          v-model:pagination="hitsTable.pagination"
         >
           {% raw %}
           <template v-slot:header="props">
@@ -183,10 +183,10 @@
         <q-table
           dense
           flat
-          :data="refunds"
+          :rows="refunds"
           row-key="id"
           :columns="refundsTable.columns"
-          :pagination.sync="refundsTable.pagination"
+          v-model:pagination="refundsTable.pagination"
         >
           {% raw %}
           <template v-slot:header="props">
