--- a/templates/boltcards/index.html
+++ b/templates/boltcards/index.html
@@ -39,14 +39,16 @@
           :columns="cardsTable.columns"
           v-model:pagination="cardsTable.pagination"
         >
-          {% raw %}
           <template v-slot:header="props">
             <q-tr :props="props">
               <q-th auto-width></q-th>
               <q-th auto-width></q-th>
-              <q-th v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.label }}
-              </q-th>
+              <q-th
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.label"
+              ></q-th>
               <q-th auto-width></q-th>
               <q-th auto-width></q-th>
               <q-th auto-width></q-th>
@@ -78,9 +80,12 @@
                   <q-tooltip>Card Stats</q-tooltip>
                 </q-btn>
               </q-td>
-              <q-td v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.value }}
-              </q-td>
+              <q-td
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.value"
+              ></q-td>
               <q-td auto-width>
                 <q-btn
                   v-if="props.row.enable"
@@ -125,7 +130,6 @@
               </q-td>
             </q-tr>
           </template>
-          {% endraw %}
         </q-table>
       </q-card-section>
     </q-card>
@@ -149,22 +153,26 @@
           :columns="hitsTable.columns"
           v-model:pagination="hitsTable.pagination"
         >
-          {% raw %}
           <template v-slot:header="props">
             <q-tr :props="props">
-              <q-th v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.label }}
-              </q-th>
+              <q-th
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.label"
+              ></q-th>
             </q-tr>
           </template>
           <template v-slot:body="props">
             <q-tr :props="props">
-              <q-td v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.value }}
-              </q-td>
+              <q-td
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.value"
+              ></q-td>
             </q-tr>
           </template>
-          {% endraw %}
         </q-table>
       </q-card-section>
     </q-card>
@@ -188,22 +196,26 @@
           :columns="refundsTable.columns"
           v-model:pagination="refundsTable.pagination"
         >
-          {% raw %}
           <template v-slot:header="props">
             <q-tr :props="props">
-              <q-th v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.label }}
-              </q-th>
+              <q-th
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.label"
+              ></q-th>
             </q-tr>
           </template>
           <template v-slot:body="props">
             <q-tr :props="props">
-              <q-td v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.value }}
-              </q-td>
+              <q-td
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.value"
+              ></q-td>
             </q-tr>
           </template>
-          {% endraw %}
         </q-table>
       </q-card-section>
     </q-card>
@@ -291,11 +303,11 @@
             </q-btn>
           </div>
         </div>
-
         <q-toggle
           v-model="toggleAdvanced"
           label="Show advanced options"
         ></q-toggle>
+
         <div v-show="toggleAdvanced" class="q-gutter-y-md">
           <q-input
             filled
@@ -305,8 +317,7 @@
             label="Card Auth key (K0)"
             hint="Used to authentificate with the card (16 bytes in HEX). "
             @randomkey
-          >
-          </q-input>
+          ></q-input>
           <q-input
             filled
             dense
@@ -322,8 +333,7 @@
             type="text"
             label="Card File key (K2)"
             hint="Used for CMAC of the message (16 bytes in HEX)."
-          >
-          </q-input>
+          ></q-input>
           <q-input
             filled
             dense
@@ -339,8 +349,7 @@
             unelevated
             color="primary"
             class="q-ml-auto"
-            v-on:click="generateKeys"
-            v-on:click.right="debugKeys"
+            @click="generateKeys"
             >Generate keys</q-btn
           >
         </div>
@@ -370,19 +379,12 @@
 
   <q-dialog v-model="qrCodeDialog.show" position="top">
     <q-card v-if="qrCodeDialog.data" class="q-pa-lg lnbits__dialog-card">
-      {% raw %}
       <div class="col q-mt-lg text-center">
-        <q-responsive
-          :ratio="1"
-          class="q-mx-xl q-mb-md"
-          v-show="!qrCodeDialog.wipe"
-        >
-          <qrcode
-            :value="qrCodeDialog.data.link"
-            :options="{width: 800}"
-            class="rounded-borders"
-          ></qrcode>
-        </q-responsive>
+        <lnbits-qrcode
+          :value="qrCodeDialog.data.link"
+          :options="{width: 800}"
+          class="rounded-borders"
+        ></lnbits-qrcode>
         <p class="text-center" v-show="!qrCodeDialog.wipe">
           (QR for <strong>create</strong> the card in
           <a
@@ -393,17 +395,11 @@
             >Boltcard NFC Card Creator</a
           >)
         </p>
-        <q-responsive
-          :ratio="1"
-          class="q-mx-xl q-mb-md"
-          v-show="qrCodeDialog.wipe"
-        >
-          <qrcode
-            :value="qrCodeDialog.data_wipe"
-            :options="{width: 800}"
-            class="rounded-borders"
-          ></qrcode>
-        </q-responsive>
+        <lnbits-qrcode
+          :value="qrCodeDialog.data_wipe"
+          :options="{width: 800}"
+          class="rounded-borders"
+        ></lnbits-qrcode>
         <p class="text-center" v-show="qrCodeDialog.wipe">
           (QR for <strong>wipe</strong> the card in
           <a
@@ -430,12 +426,18 @@
         />
       </div>
       <p style="word-break: break-all">
-        <strong>Name:</strong> {{ qrCodeDialog.data.name }}<br />
-        <strong>UID:</strong> {{ qrCodeDialog.data.uid }}<br />
-        <strong>External ID:</strong> {{ qrCodeDialog.data.external_id }}<br />
-        <strong>Lock key (K0):</strong> {{ qrCodeDialog.data.k0 }}<br />
-        <strong>Meta key (K1 & K3):</strong> {{ qrCodeDialog.data.k1 }}<br />
-        <strong>File key (K2 & K4):</strong> {{ qrCodeDialog.data.k2 }}<br />
+        <strong>Name: </strong><span v-text="qrCodeDialog.data.name"></span
+        ><br />
+        <strong>UID: </strong> <span v-text="qrCodeDialog.data.uid"></span
+        ><br />
+        <strong>External ID:</strong>
+        <span v-text="qrCodeDialog.data.external_id"></span><br />
+        <strong>Lock key (K0):</strong>
+        <span v-text="qrCodeDialog.data.k0"></span><br />
+        <strong>Meta key (K1 & K3):</strong>
+        <span v-text="qrCodeDialog.data.k1"></span><br />
+        <strong>File key (K2 & K4):</strong>
+        <span v-text="qrCodeDialog.data.k2"></span><br />
       </p>
       <p>
         Always backup all keys that you're trying to write on the card. Without
@@ -472,7 +474,6 @@
       >
         <q-tooltip>Backup the keys, or wipe the card first!</q-tooltip>
       </q-btn>
-      {% endraw %}
       <div class="row q-mt-lg q-gutter-sm">
         <q-btn v-close-popup flat color="grey" class="q-ml-auto">Close</q-btn>
       </div>
