--- a/templates/boltcards/display.html
+++ b/templates/boltcards/display.html
@@ -74,8 +74,8 @@ card.card_name }{% endblock %} {% block page %}
 {% endblock %}{% block scripts %}
 <script>
   const mapHits = obj => {
-    obj.date = Quasar.utils.date.formatDate(
-      new Date(obj.time * 1000),
+    obj.date = Quasar.date.formatDate(
+      new Date(obj.time),
       'YYYY-MM-DD HH:mm'
     )
 
@@ -86,7 +86,7 @@ card.card_name }{% endblock %} {% block page %}
     el: '#vue',
     delimiters: ['${', '}'],
     mixins: [windowMixin],
-    data: function () {
+    data() {
       return {
         card: null,
         hits: null,
@@ -119,11 +119,11 @@ card.card_name }{% endblock %} {% block page %}
       }
     },
     created() {
-      this.card = JSON.parse('{{ card | tojson}}')
-      let hits = JSON.parse('{{ hits | tojson}}')
-      let refunds = JSON.parse('{{ refunds | tojson}}')
+      this.card = JSON.parse({{ card | tojson }})
+      const hits = {{ hits | tojson | safe }}
+      this.hits = hits.map(JSON.parse).map(mapHits)
+      const refunds = {{ refunds | tojson | safe }}
       this.refunds = refunds || []
-      this.hits = hits.map(mapHits)
     },
     computed: {
       enabled() {
