--- a/templates/boltcards/index.html
+++ b/templates/boltcards/index.html
@@ -252,7 +252,7 @@
               filled
               dense
               emit-value
-              v-model.trim="cardDialog.data.tx_limit"
+              v-model="cardDialog.data.tx_limit"
               type="number"
               label="Max transaction (sats)"
               class="q-pr-sm"
@@ -263,7 +263,7 @@
               filled
               dense
               emit-value
-              v-model.trim="cardDialog.data.daily_limit"
+              v-model="cardDialog.data.daily_limit"
               type="number"
               label="Daily limit (sats)"
             ></q-input>
@@ -273,7 +273,7 @@
           filled
           dense
           emit-value
-          v-model.trim="cardDialog.data.card_name"
+          v-model="cardDialog.data.card_name"
           type="text"
           label="Card name "
         >
@@ -284,7 +284,7 @@
               filled
               dense
               emit-value
-              v-model.trim="cardDialog.data.uid"
+              v-model="cardDialog.data.uid"
               type="text"
               label="Card UID "
             >
@@ -293,10 +293,9 @@
           <div class="col-2 q-pl-sm">
             <q-btn
               outline
-              disable
               color="grey"
               icon="nfc"
-              :disable="nfcTagReading"
+              :disable="disableNfcButton"
               @click="readNfcTag()"
             >
               <q-tooltip>Tap card to scan UID</q-tooltip>
@@ -312,7 +311,7 @@
           <q-input
             filled
             dense
-            v-model.trim="cardDialog.data.k0"
+            v-model="cardDialog.data.k0"
             type="text"
             label="Card Auth key (K0)"
             hint="Used to authentificate with the card (16 bytes in HEX). "
@@ -321,7 +320,7 @@
           <q-input
             filled
             dense
-            v-model.trim="cardDialog.data.k1"
+            v-model="cardDialog.data.k1"
             type="text"
             label="Card Meta key (K1)"
             hint="Used for encypting of the message (16 bytes in HEX)."
@@ -329,7 +328,7 @@
           <q-input
             filled
             dense
-            v-model.trim="cardDialog.data.k2"
+            v-model="cardDialog.data.k2"
             type="text"
             label="Card File key (K2)"
             hint="Used for CMAC of the message (16 bytes in HEX)."
@@ -382,8 +381,8 @@
       <div class="col q-mt-lg text-center">
         <lnbits-qrcode
           :value="qrCodeDialog.data.link"
-          :options="{width: 800}"
           class="rounded-borders"
+          v-show="!qrCodeDialog.wipe"
         ></lnbits-qrcode>
         <p class="text-center" v-show="!qrCodeDialog.wipe">
           (QR for <strong>create</strong> the card in
@@ -397,8 +396,8 @@
         </p>
         <lnbits-qrcode
           :value="qrCodeDialog.data_wipe"
-          :options="{width: 800}"
           class="rounded-borders"
+          v-show="qrCodeDialog.wipe"
         ></lnbits-qrcode>
         <p class="text-center" v-show="qrCodeDialog.wipe">
           (QR for <strong>wipe</strong> the card in
@@ -482,5 +481,5 @@
 </div>
 
 {% endblock %} {% block scripts %} {{ window_vars(user) }}
-<script src="/boltcards/static/js/index.js"></script>
+<script src="{{ static_url_for('boltcards/static', path='js/index.js') }}"></script>
 {% endblock %}
