--- a/templates/boltcards/index.html
+++ b/templates/boltcards/index.html
@@ -34,19 +34,21 @@
         <q-table
           dense
           flat
-          :data="cards"
+          :rows="cards"
           row-key="id"
           :columns="cardsTable.columns"
-          :pagination.sync="cardsTable.pagination"
+          v-model:pagination="cardsTable.pagination"
         >
-          {% raw %}
           <template v-slot:header="props">
             <q-tr :props="props">
               <q-th auto-width></q-th>
               <q-th auto-width></q-th>
-              <q-th v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.label }}
-              </q-th>
+              <q-th
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.label"
+              ></q-th>
               <q-th auto-width></q-th>
               <q-th auto-width></q-th>
               <q-th auto-width></q-th>
@@ -78,9 +80,12 @@
                   <q-tooltip>Card Stats</q-tooltip>
                 </q-btn>
               </q-td>
-              <q-td v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.value }}
-              </q-td>
+              <q-td
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.value"
+              ></q-td>
               <q-td auto-width>
                 <q-btn
                   v-if="props.row.enable"
@@ -125,7 +130,6 @@
               </q-td>
             </q-tr>
           </template>
-          {% endraw %}
         </q-table>
       </q-card-section>
     </q-card>
@@ -144,27 +148,31 @@
         <q-table
           dense
           flat
-          :data="hits"
+          :rows="hits"
           row-key="id"
           :columns="hitsTable.columns"
-          :pagination.sync="hitsTable.pagination"
+          v-model:pagination="hitsTable.pagination"
         >
-          {% raw %}
           <template v-slot:header="props">
             <q-tr :props="props">
-              <q-th v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.label }}
-              </q-th>
+              <q-th
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.label"
+              ></q-th>
             </q-tr>
           </template>
           <template v-slot:body="props">
             <q-tr :props="props">
-              <q-td v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.value }}
-              </q-td>
+              <q-td
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.value"
+              ></q-td>
             </q-tr>
           </template>
-          {% endraw %}
         </q-table>
       </q-card-section>
     </q-card>
@@ -183,27 +191,31 @@
         <q-table
           dense
           flat
-          :data="refunds"
+          :rows="refunds"
           row-key="id"
           :columns="refundsTable.columns"
-          :pagination.sync="refundsTable.pagination"
+          v-model:pagination="refundsTable.pagination"
         >
-          {% raw %}
           <template v-slot:header="props">
             <q-tr :props="props">
-              <q-th v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.label }}
-              </q-th>
+              <q-th
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.label"
+              ></q-th>
             </q-tr>
           </template>
           <template v-slot:body="props">
             <q-tr :props="props">
-              <q-td v-for="col in props.cols" :key="col.name" :props="props">
-                {{ col.value }}
-              </q-td>
+              <q-td
+                v-for="col in props.cols"
+                :key="col.name"
+                :props="props"
+                v-text="col.value"
+              ></q-td>
             </q-tr>
           </template>
-          {% endraw %}
         </q-table>
       </q-card-section>
     </q-card>
@@ -240,7 +252,7 @@
               filled
               dense
               emit-value
-              v-model.trim="cardDialog.data.tx_limit"
+              v-model="cardDialog.data.tx_limit"
               type="number"
               label="Max transaction (sats)"
               class="q-pr-sm"
@@ -251,7 +263,7 @@
               filled
               dense
               emit-value
-              v-model.trim="cardDialog.data.daily_limit"
+              v-model="cardDialog.data.daily_limit"
               type="number"
               label="Daily limit (sats)"
             ></q-input>
@@ -261,7 +273,7 @@
           filled
           dense
           emit-value
-          v-model.trim="cardDialog.data.card_name"
+          v-model="cardDialog.data.card_name"
           type="text"
           label="Card name "
         >
@@ -272,7 +284,7 @@
               filled
               dense
               emit-value
-              v-model.trim="cardDialog.data.uid"
+              v-model="cardDialog.data.uid"
               type="text"
               label="Card UID "
             >
@@ -281,36 +293,34 @@
           <div class="col-2 q-pl-sm">
             <q-btn
               outline
-              disable
               color="grey"
               icon="nfc"
-              :disable="nfcTagReading"
+              :disable="disableNfcButton"
               @click="readNfcTag()"
             >
               <q-tooltip>Tap card to scan UID</q-tooltip>
             </q-btn>
           </div>
         </div>
-
         <q-toggle
           v-model="toggleAdvanced"
           label="Show advanced options"
         ></q-toggle>
+
         <div v-show="toggleAdvanced" class="q-gutter-y-md">
           <q-input
             filled
             dense
-            v-model.trim="cardDialog.data.k0"
+            v-model="cardDialog.data.k0"
             type="text"
             label="Card Auth key (K0)"
             hint="Used to authentificate with the card (16 bytes in HEX). "
             @randomkey
-          >
-          </q-input>
+          ></q-input>
           <q-input
             filled
             dense
-            v-model.trim="cardDialog.data.k1"
+            v-model="cardDialog.data.k1"
             type="text"
             label="Card Meta key (K1)"
             hint="Used for encypting of the message (16 bytes in HEX)."
@@ -318,12 +328,11 @@
           <q-input
             filled
             dense
-            v-model.trim="cardDialog.data.k2"
+            v-model="cardDialog.data.k2"
             type="text"
             label="Card File key (K2)"
             hint="Used for CMAC of the message (16 bytes in HEX)."
-          >
-          </q-input>
+          ></q-input>
           <q-input
             filled
             dense
@@ -339,8 +348,7 @@
             unelevated
             color="primary"
             class="q-ml-auto"
-            v-on:click="generateKeys"
-            v-on:click.right="debugKeys"
+            @click="generateKeys"
             >Generate keys</q-btn
           >
         </div>
@@ -370,19 +378,12 @@
 
   <q-dialog v-model="qrCodeDialog.show" position="top">
     <q-card v-if="qrCodeDialog.data" class="q-pa-lg lnbits__dialog-card">
-      {% raw %}
       <div class="col q-mt-lg text-center">
-        <q-responsive
-          :ratio="1"
-          class="q-mx-xl q-mb-md"
+        <lnbits-qrcode
+          :value="qrCodeDialog.data.link"
+          class="rounded-borders"
           v-show="!qrCodeDialog.wipe"
-        >
-          <qrcode
-            :value="qrCodeDialog.data.link"
-            :options="{width: 800}"
-            class="rounded-borders"
-          ></qrcode>
-        </q-responsive>
+        ></lnbits-qrcode>
         <p class="text-center" v-show="!qrCodeDialog.wipe">
           (QR for <strong>create</strong> the card in
           <a
@@ -393,17 +394,11 @@
             >Boltcard NFC Card Creator</a
           >)
         </p>
-        <q-responsive
-          :ratio="1"
-          class="q-mx-xl q-mb-md"
+        <lnbits-qrcode
+          :value="qrCodeDialog.data_wipe"
+          class="rounded-borders"
           v-show="qrCodeDialog.wipe"
-        >
-          <qrcode
-            :value="qrCodeDialog.data_wipe"
-            :options="{width: 800}"
-            class="rounded-borders"
-          ></qrcode>
-        </q-responsive>
+        ></lnbits-qrcode>
         <p class="text-center" v-show="qrCodeDialog.wipe">
           (QR for <strong>wipe</strong> the card in
           <a
@@ -430,12 +425,18 @@
         />
       </div>
       <p style="word-break: break-all">
-        <strong>Name:</strong> {{ qrCodeDialog.data.name }}<br />
-        <strong>UID:</strong> {{ qrCodeDialog.data.uid }}<br />
-        <strong>External ID:</strong> {{ qrCodeDialog.data.external_id }}<br />
-        <strong>Lock key (K0):</strong> {{ qrCodeDialog.data.k0 }}<br />
-        <strong>Meta key (K1 & K3):</strong> {{ qrCodeDialog.data.k1 }}<br />
-        <strong>File key (K2 & K4):</strong> {{ qrCodeDialog.data.k2 }}<br />
+        <strong>Name: </strong><span v-text="qrCodeDialog.data.name"></span
+        ><br />
+        <strong>UID: </strong> <span v-text="qrCodeDialog.data.uid"></span
+        ><br />
+        <strong>External ID:</strong>
+        <span v-text="qrCodeDialog.data.external_id"></span><br />
+        <strong>Lock key (K0):</strong>
+        <span v-text="qrCodeDialog.data.k0"></span><br />
+        <strong>Meta key (K1 & K3):</strong>
+        <span v-text="qrCodeDialog.data.k1"></span><br />
+        <strong>File key (K2 & K4):</strong>
+        <span v-text="qrCodeDialog.data.k2"></span><br />
       </p>
       <p>
         Always backup all keys that you're trying to write on the card. Without
@@ -472,7 +473,6 @@
       >
         <q-tooltip>Backup the keys, or wipe the card first!</q-tooltip>
       </q-btn>
-      {% endraw %}
       <div class="row q-mt-lg q-gutter-sm">
         <q-btn v-close-popup flat color="grey" class="q-ml-auto">Close</q-btn>
       </div>
@@ -481,5 +481,5 @@
 </div>
 
 {% endblock %} {% block scripts %} {{ window_vars(user) }}
-<script src="/boltcards/static/js/index.js"></script>
+<script src="{{ static_url_for('boltcards/static', path='js/index.js') }}"></script>
 {% endblock %}
