--- a/templates/boltcards/index.html
+++ b/templates/boltcards/index.html
@@ -279,7 +279,7 @@
         >
         </q-input>
         <div class="row">
-          <div class="col-10">
+          <div :class="disableNfcButton ? 'col-12' : 'col-10'">
             <q-input
               filled
               dense
@@ -291,7 +291,7 @@
             >
             </q-input>
           </div>
-          <div class="col-2 q-pl-sm">
+          <div v-if="!disableNfcButton" class="col-2 q-pl-sm">
             <q-btn
               outline
               color="grey"
